<resources>
    <!-- App settings-->
    <string name="app_name">Observation App</string>
    <string name="action_settings">Settings</string>
    <string name="drupal_site_url">http://137.149.157.10/cs482</string>
    <string name="drupal_server_endpoint">mobile-api</string>
    <string name="google_app_id">midyear-forest-124421</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="agree_term_of_use">By clicking the button \n below,I agree to the <a href="http://137.149.157.10/cs482/content/terms-conditions">Term of Use</a></string>



    <!-- Client side validation error message-->
    <string name="field_empty_error">This field cannot be empty</string>
    <string name="username_contains_illeagle_char">User name can only contains digits or letters</string>
    <string name="invalid_number">Invalid number</string>
    <string name="email_format_error">The email format is not correct</string>

    <!-- Server side validation error message-->
    <string name="username_registered_err">The user name is already registered</string>
    <string name="email_registered_err">The email is already registered</string>

    <!-- Input field hint string-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirm">Confirm Password</string>
    <string name="hint_username">User Name</string>
    <string name="hint_reset_password">User name or email</string>
    <string name="hint_radius">Radius in km</string>

    <string name="reset_password_link_loginActivity">Try <a href="com.package.reset_password://">Reset Password</a></string>
    <!-- Register Activity-->
    <string name="register_successful">Your registration request is sent, please wait for administrator\'s approval.\n An activation email with your initial password would be sent to your email after approval.</string>
    <string name="network_error">Network error,try again later</string>
    <string name="btn_register_registerActivity">Register</string>

    <!-- Reset Password Activity-->
    <string name="reset_password_restActivity">Please enter your user name or email to reset password:</string>
    <string name="non_valid_name_email">The input is not a valid user name or email</string>
    <string name="reset_successful">An email is sent to your email.</string>
    <string name="btn_submit_restActivity">Submit</string>

    <!--Notification Util-->
    <string name="sessionExpiredNotificationTitle">Session Expired</string>
    <string name="sessionExpiredNotificationText">Click to login</string>
    <string name="uploadingNotificationTitle">Uploading…</string>
    <string name="uploadingNotificationText">Uploading new observation entry</string>
    <string name="uploadFailedNotificationTitle">Upload Failed</string>
    <string name="uploadFailedNotificationText">Upload Failed,try again later…</string>
    <string name="updatingNotificationTitle">Updating…</string>
    <string name="deletingNotificationTitle">Deleting…</string>
    <string name="updatingUserImageNotificationText">Updating user profile image…</string>
    <string name="updatingUserNameNotificationText">Updating user profile name…</string>
    <string name="updatingUserAddressNotificationText">Updating user profile address…</string>
    <string name="deletingUserPostNotificationText">Deleting observation…</string>
    <!-- Sliding Menu-->
    <string name="login_SlidingMenu">Login</string>

    <!-- Login Activity-->
    <string name="login_later_loginActivity">Login Later</string>
    <string name="btn_login_loginActivity">Login</string>
    <string name="btn_register_loginActivity">Register</string>
    <!-- Upload Activities-->
    <string name="observation_record_uploadActivity">Record</string>
    <string name="name_uploadActivity">Name</string>
    <string name="picture_Description_uploadActivity">Picture&amp;Description</string>
    <string name="sound_uploadActivity">Sound</string>
    <string name="date_time_uploadActivity">Date &amp; Time</string>
    <string name="location_uploadActivity">Location</string>
    <string name="hint_record_uploadActivity">Enter a record name&#8230;</string>
    <string name="hint_name_uploadActivity">Write a name here&#8230;</string>
    <string name="hint_description_uploadActivity">Write a description here&#8230;</string>
    <string name="hint_location_uploadActivity">Add a location</string>
    <string name="image_description_uploadActivity">Upload an image</string>
    <string name="record_not_exist">Record Not Exist</string>
    <string name="cannot_be_empty">Type "unknown" for unknown record</string>
    <string name="hint_date_uploadActivity">Click to add date&#8230;</string>

    <!-- User Profile Activity-->
    <string name="my_observations_userProfileActivity">My Observations</string>
    <string name="change_password_userProfileActivity">Change Password</string>
    <string name="logout_userProfileActivity">Logout</string>
    <string name="profile_photo_userProfileActivity">Profile Photo</string>
    <string name="user_name_userProfileActivity">User Name</string>
    <string name="email_userProfileActivity">Email</string>
    <string name="address1_userProfileActivity">My Address 1</string>
    <string name="address2_userProfileActivity">My Address 2</string>
    <string name="update_profile_success_userProfileActivity">Successfully Update Profile</string>
    <string name="failed_logout_userProfileActivity">Failed to logout, try again later</string>
    <string name="logout_title_userProfileActivity">Logout</string>
    <string name="logout_msg_userProfileActivity">Are you sure to logout current account?</string>
    <string name="cannot_change_email_userProfileActivity">Cannot change email</string>
    <string name="title_activity_choose_photo_upload_method">ChoosePhotoUploadMethodActivity
    </string>

    <!-- ChoosePhotoUploadMethod Activity-->
    <string name="upload_from_galary">Choose one from galary</string>
    <string name="take_a_photo_now">Take a photo now</string>
    <string name="title_activity_choose_upload_method">ChooseUploadMethodActivity</string>
    <string name="image_reading_error">Cannot read image from local</string>
    <string name="image_saving_error">Cannot save image to local</string>
    <string name="failed_update_address">Failed to update address</string>


    <!-- button text-->
    <string name="confirm">Confirm</string>
    <string name="submit">Submit</string>

    <!--Dialog messages & titles-->
    <string name="address_not_found_title">Address Not found</string>
    <string name="address_not_found_choose_again_msg">Can not find corresponding address,select another one?</string>
    <string name="address_not_found_continue_upload_msg">Can not find corresponding address,continue to upload location?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_upload_title">Cacnel Uploading</string>
    <string name="cancel_upload_msg">Are you sure to cancel uploading?</string>

    <!-- Observation Detail Activity-->
    <string name="node_not_found_observationDetailActivity">The record may be deleted</string>
    <string name="delete_post_msg_observationDetailActivity">Are you sure to delete this post?</string>
    <string name="delete_post_title_observationDetailActivity">Delete Observation</string>
    <string name="failed_delete_observationDetailActivity">Failed to delete observation</string>

    <!-- Newest Observation Activity-->
    <string name="loading_newestObservationActivity">Loading&#8230;</string>
    <string name="no_more_newestObservationActivity">No More New Observations</string>


    <!-- Sliding menu-->
    <string name="upload_slidingMenuItem">Upload</string>
    <string name="search_slidingMenuItem">Search</string>
    <string name="guide_slidingMenuItem">User Guide</string>
    <string name="myPost_slidingMenuItem">My Posts</string>

    <!-- My Post Activity-->
    <string name="my_post_toolbar_title_myPostActivity">My Posts</string>
    <string name="view_more_on_web_myPostActivity">View More On Web</string>
    <string name="write_something_myPostActivity">Let\'s Write Something!</string>
    <string name="no_more_myPostActivity">No More Observations</string>

    <!-- Search Activity-->
    <string name="category_label_searchObservationActivity">Category</string>
    <string name="record_label_searchObservationActivity">Record</string>
    <string name="location_label_searchObservationActivity">Location</string>
    <string name="date_label_searchObservationActivity">Date</string>
    <string name="from_label_searchObservationActivity">From</string>
    <string name="to_label_searchObservationActivity">To</string>
    <string name="search_btn_searchObservationActivity">Search</string>
    <string name="reset_btn_searchObservationActivity">Reset</string>
    <string name="hint_record_searchObservationActivity">Enter a record here</string>
    <string name="hint_location_searchObservationActivity">Search in an area</string>
    <string name="hint_date_searchObservationActivity">Choose a date</string>
    <string name="search_tool_bar_title_searchObservationActivity">Search</string>
    <string name="record_not_exist_searchObservationActivity">Record not exist</string>
    <string name="start_date_larger_than_end_searchObservationActivity">Should be less than end date</string>
    <string name="post_before_searchObservationActivity">Posts before&#8230;</string>
    <string name="post_after_searchObservationActivity">Posts after&#8230;</string>
    <string-array name="category_array">
        <item>None</item>
        <item>Agriculture</item>
        <item>Amphibians/ Reptiles</item>
        <item>Birds</item>
        <item>Fish</item>
        <item>Weather</item>
        <item>Plants</item>
        <item>Mammals</item>
        <item>Insects</item>
    </string-array>

    <!-- Change Text Field Activity-->
    <string name="defalut_radius_changeTextFieldActivity">The default radius is 100km</string>

    <!-- Search result activity-->
    <string name="no_search_result_searchResultActivity">No search result</string>
    <string name="my_post_toolbar_title_searchResultActivity">Search Result</string>
    <string name="no_more_searchResultActivity">No More Result</string>
    <string name="click_to_load_more_searchResultActivity">Click To Load More</string>
    
    <!-- Actions -->
    <string name="action_delete">Delete</string>

</resources>
