<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    android:fitsSystemWindows="true"
    tools:context="ca.zhuoliupei.observationapp.SearchObservationActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_SearchObservationActivity"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/holo_blue_dark"
                android:elevation="4dp"
                app:popupTheme="@style/AppTheme.PopupOverlay">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:paddingEnd="20dp"
            android:paddingStart="20dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/category_label_searchObservationActivity"
                        android:textColor="#4444ff" />

                    <Spinner
                        android:id="@+id/spinnerCategory_SearchObservationActivity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/record_label_searchObservationActivity"
                        android:textColor="#4444ff" />

                    <ViewAndFragmentClass.DelayAutoCompleteTextView
                        android:id="@+id/txtCategory_SearchObservationActivity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@android:color/white"
                        android:hint="@string/hint_record_searchObservationActivity"
                        android:imeOptions="flagNoExtractUi|actionSearch"
                        android:inputType="textCapSentences"
                        android:padding="10dp" />

                    <ProgressBar
                        android:id="@+id/pb_loading_indicator_SearchObservationActivity"
                        style="?android:attr/progressBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|right"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/location_label_searchObservationActivity"
                        android:textColor="#4444ff" />

                    <EditText
                        android:id="@+id/txtLocation_SearchObservationActivity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@android:color/white"
                        android:drawableLeft="@drawable/icon_position"
                        android:editable="false"
                        android:focusable="false"
                        android:hint="@string/hint_location_searchObservationActivity"
                        android:inputType="none"
                        android:padding="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_label_searchObservationActivity"
                        android:textColor="#4444ff"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"/>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="11">


                        <EditText
                            android:id="@+id/txtFromDate_SearchObservationActivity"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:background="@android:color/white"
                            android:hint="yyyy-mm-dd"
                            android:imeOptions="flagNoExtractUi|actionSearch"
                            android:inputType="textCapSentences"
                            android:padding="10dp" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="----"
                            android:textColor="#4444ff" />

                        <EditText
                            android:id="@+id/txtToDate_SearchObservationActivity"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:background="@android:color/white"
                            android:hint="yyyy-mm-dd"
                            android:imeOptions="flagNoExtractUi|actionSearch"
                            android:inputType="textCapSentences"
                            android:padding="10dp" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnCancel_UploadActivity"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="#DDDDDD"
                android:text="@string/reset_btn_searchObservationActivity" />

            <Button
                android:id="@+id/btnSubmit_UploadActivity"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="#55FF55"
                android:text="@string/search_btn_searchObservationActivity" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
